--- a/threejs_main/package.json
+++ b/threejs_main/package.json
@@ -32,6 +32,8 @@
     "webpack-merge": "^5.9.0"
   },
   "dependencies": {
+    "lil-gui": "^0.18.2",
+    "stats.js": "^0.17.0",
     "three": "^0.153.0"
   }
 }
